<resources>
    <string name="app_name">Funny Jokes</string>
    <string name="ad_unit_id">ca-app-pub-9086867599454362/1080293333</string>
    <string name="ad_interstitial_id">ca-app-pub-9086867599454362/2557026536</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_feedback">Phẩn hồi</string>
    <string name="nav_other">Khác</string>
    <string name="nav_vnexpress_net">VNExpress.net</string>
    <string name="nav_zing_vn">Zing.vn</string>
    <string name="nav_share_with_facebook">Chia sẽ qua Facebook</string>
    <string name="nav_24h_com_vn">24h.com.vn</string>
    <string name="input_full_description">Input full description</string>
    <string name="input_description">Input description</string>
    <string name="input_date_posted">Input date posted</string>
    <string name="input_url_image">Input url image</string>
    <string name="input_title">Input title</string>
    <string name="news_from">News from</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <string-array name="source">
        <item>zing</item>
        <item>vnexpress</item>
        <item>24h</item>
    </string-array>

    <string name="title_activity_show_full_ads">ShowFullAdsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nav_rating">Đánh giá</string>
    <string name="nav_funny_jokes">Nguồn</string>
</resources>
